# llamaindex-study

./: .env  .env.example  .gitignore  .runtime_settings.json  README.md  api.py  example.py  main.py  package-lock.json  pyproject.toml  requirements.txt  test_reranker.py
.llamaindex/: project.db  tasks.db
.llamaindex/storage/: default__vector_store.json  docstore.json  index_store.json
.sisyphus/plans/: file-level-progress-tracking.md
.test_llamaindex/: .env.test  test_upgrade.py
.test_llamaindex/test_docs/: test.md
api/: deps.py  main.py  schemas.py
api/routes/: __init__.py  admin.py  categories.py  documents.py  extraction.py  health.py  ingest.py  knowledge_bases.py  lance.py  models.py  obsidian.py  (+6 more)
data/: sample.txt
docs/: API.md  ARCHITECTURE.md  BUGS.md  CLI.md  QUERY_PARAM_GUIDE.md  README.md  SEARCH_PARAM_GUIDE.md  UPGRADE_v0.14.md
examples/: document_processing_example.py  obsidian_classifier_example.py  vector_store_example.py  zotero_example.py
kb/: __init__.py  category_classifier.py  database.py  deduplication.py  document_chunk_service.py  document_processor.py  generic_processor.py  import_service.py  ingest.py  ingest_hitech_history.py  ingest_vdb.py  ingest_zotero.py  keyword_extractor.py  lance_crud.py  lancedb_write_queue.py  manager.py  obsidian_config.py  obsidian_processor.py  obsidian_reader.py  parallel_embedding.py  parallel_executor.py  preview_service.py  registry.py  scheduler.py  services.py  sync_state.py  task_executor.py  task_lock.py  task_queue.py  topic_analyzer.py  websocket_manager.py  zotero_processor.py  zotero_reader.py
kb_analysis/: category_classifier.py  keyword_extractor.py  topic_analyzer.py
kb_cli/: __init__.py  __main__.py  ingest.py  scheduler.py
kb_core/: __init__.py  database.py  document_chunk_service.py  import_service.py  preview_service.py  registry.py  scheduler.py  services.py  task_executor.py  task_queue.py  task_scheduler.py  websocket_manager.py
kb_obsidian/: __init__.py  config.py  processor.py  reader.py
kb_processing/: document_processor.py  generic_processor.py  parallel_embedding.py
kb_storage/: __init__.py  lance_crud.py  lancedb_write_queue.py  sync_state.py
kb_zotero/: processor.py  reader.py
rag/: __init__.py  _infra.py  callbacks.py  chat_engine.py  config.py  embedding_factory.py  embedding_service.py  logger.py  node_parser.py  ollama_utils.py  query_engine.py  query_transform.py  rag_evaluator.py  reader.py  reranker.py  response_synthesizer.py  structured_extractor.py  token_stats_db.py  vector_store.py
scripts/: backfill_file_hash.py  backfill_md_meta.py  backfill_zotero_doc_id.py  com.llamaindex.ragapi.plist  health_check.py  kb_status.py  lance_crud.py  migrate_documents.py  migrate_task_queue.py  re_export_truncated_md.py  recover_dedup_records.py  run_api.sh  sync_lance_to_sqlite.py  test_query_enhancements.py  tmp_migrate.py
webui/: .env.example  package-lock.json  package.json  vite.config.ts
(+87 files in other folders)
